// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedSales should adjust the presentation of the cards if the width is md+ 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedSales root"
  classes={Object {}}
  subTitle="Big sales for some of the hottest titles"
  title="Sales"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedSales__featuredSaleContainer featuredSaleContainer"
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      item={true}
      spacing={2}
      xs={6}
    >
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__featuredSale featuredSale"
        item={true}
        key="1"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "1",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="lib"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__featuredSale featuredSale"
        item={true}
        key="2"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "2",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="lib"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedSales__subFeaturedSaleContainer subFeaturedSaleContainer"
      container={true}
      item={true}
      spacing={2}
      xs={6}
    >
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__subFeaturedSale subFeaturedSale"
        item={true}
        key="3"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "3",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="header"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__subFeaturedSale subFeaturedSale"
        item={true}
        key="4"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "4",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="header"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__subFeaturedSale subFeaturedSale"
        item={true}
        key="5"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "5",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="header"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-FeaturedSales__subFeaturedSale subFeaturedSale"
        item={true}
        key="6"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "6",
              "developers": Array [
                "a",
              ],
              "discount": 25,
              "finalPrice": 750,
              "freeToPlay": false,
              "genres": Array [
                "a",
              ],
              "headerImage": "header",
              "initialPrice": 1000,
              "libraryCapsule": "lib",
              "name": "name",
              "onSale": true,
              "ownersFormatted": "10,000 .. 20,000",
              "publishers": Array [
                "a",
              ],
              "userRating": 95,
            }
          }
          variant="header"
          withPrice={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(FeaturedWidget)>
`;

exports[`FeaturedSales should render successfully 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedSales root"
  classes={Object {}}
  subTitle="Big sales for some of the hottest titles"
  title="Sales"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedSales__featuredSaleContainer featuredSaleContainer"
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedSales__featuredSale featuredSale"
      item={true}
      key="1"
      xs={4}
    >
      <HighlightTrailerQuery
        data={
          Object {
            "appid": "1",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "libraryCapsule": "lib",
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="lib"
        withPrice={true}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedSales__featuredSale featuredSale"
      item={true}
      key="2"
      xs={4}
    >
      <HighlightTrailerQuery
        data={
          Object {
            "appid": "2",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "libraryCapsule": "lib",
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="lib"
        withPrice={true}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedSales__featuredSale featuredSale"
      item={true}
      key="3"
      xs={4}
    >
      <HighlightTrailerQuery
        data={
          Object {
            "appid": "3",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "libraryCapsule": "lib",
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="lib"
        withPrice={true}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(PaginationWidget)
    className="wye-FeaturedSales__paginationWidget paginationWidget"
    classes={Object {}}
    currentPage={1}
    setCurrentPage={[Function]}
    totalPages={2}
  />
</WithStyles(FeaturedWidget)>
`;
